Fixed letter-spacing hack to get grid system to work without removing whitespace in HTML

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -61,8 +61,8 @@ $use-greybox:       true;
 .grid{
 	letter-spacing: -1em;
 
-	.grid__item{
-		letter-spacing: 1em;
+	.grid__item {
+		letter-spacing: initial;
 	}
 }
 
