--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 .grid {
   letter-spacing: -1em; }
   .grid .grid__item {
-    letter-spacing: 1em; }
+    letter-spacing: initial; }
 
 /*------------------------------------*\
     $CUSTOM
